# exponea-assignment

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: config.py  exponea.py  main.py
src/: exponea.py  main.py
tests/: test_exponea.py  test_main.py
